--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -29,13 +29,19 @@
                             <h4 th:text="${targetQuantity - okCount} + '개'">0개</h4>
                         </div>
                     </div>
+                    <div class="card shadow-sm mt-3" style="min-height: 250px;">
+                        <div class="card-body">
+                            <h6 class="text-muted">💡 AI 리포트 요약</h6>
+                            <p th:text="${dashboardSummary}" style="white-space: pre-line;">요약을 불러오는 중입니다...</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="col-lg-8 my-lg-2">
             <h2 class="my-4">생산량 통계</h2>
-            <canvas id="monitoringChart2" class="mt-3" height="200"></canvas>
+            <canvas id="monitoringChart2" class="mt-3" height="270"></canvas>
         </div>
     </div>
 
