--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -36,6 +36,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 /* dropdown size */
 @media (min-width: 768px) {
     .errorAlert-xs{  display: none;
@@ -44,6 +45,13 @@ body {
 @media (max-width: 767px) {
     .errorAlert-lg{  display: none;
     }
+}
+.alert-dropdown {
+    width: 100%;            /* 부모 요소 기준으로 가득 차도록 */
+    min-width: 240px;       /* 너무 작지 않게 최소값 설정 */
+    max-width: 90vw;        /* 화면 너비의 90%를 넘지 않도록 */
+    max-height: 300px;      /* 높이는 그대로 */
+    overflow-y: auto;
 }
 
 
